--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,15 @@ phases:
   install:
     commands:
       - echo Installing RSpec...
+      - gem install rspec
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Ruby code...
+      - rspec HelloWorld_spec.rb 
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
-  - MyBuild
+  files:
+    - HelloWorld.rb
